--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "experimentalDecorators": true,
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
